Fixed a bug where you couldn't resize the Live Preview editor if there was a scrollbar

--- a/src/resources/css/entry.scss
+++ b/src/resources/css/entry.scss
@@ -27,7 +27,6 @@ h1 span.draft span { display: none; }
 #livepreview-editor { z-index: 3; padding: 0 24px; overflow: auto; @include box-shadow(0 0 0 1px rgba(0,0,0,0.1));
 	@include box-sizing(border-box);
 }
-#livepreview-editor #livepreview-draghandle { position: absolute; top: 0; @include right(0); width: 5px; height: 100%; cursor: move; }
 #livepreview-editor header { margin: 0 -24px 24px; padding: 14px 24px 13px; }
 #livepreview-editor header .btn { @include floatright; }
 #livepreview-editor header h1 { margin: 0; font-size: 25px; line-height: 30px; color: #333; }
@@ -36,3 +35,5 @@ h1 span.draft span { display: none; }
 #livepreview-iframe-container { z-index: 2; }
 #livepreview-iframe-container:after { position: absolute; top: 0; left: 0; width: 100%; height: 100%; content: ''; font-size: 0; }
 #livepreview-iframe { width: 100%; height: 100%; }
+
+#livepreview-draghandle { position: absolute; z-index: 3; top: 0; margin-left: -3px; width: 6px; height: 100%; cursor: move; }
